--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <a href="index.html">
             <h2>Inicio</h2>
         </a>
-        <a href="#">
+        <a href="tienda.html">
             <h2>Tienda</h2>
         </a>
         <a href="#">
-            <h2>Blog</h2>
+            <h2>Ubicaciones</h2>
         </a>
         <a href="#">
             <h2>Nosotros</h2>
@@ -137,6 +137,7 @@
                 <li><a href="#">Opciones de pago</a></li>
             </ul>
         </div>
+        <img class="logof" src="img/logo.png">
         <div class="red">
             <h4>Redes Sociales</h4>
             <div class="reso">
