--- a/tienda.html
+++ b/tienda.html
@@ -7,31 +7,35 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="css/tienda.css">
+    <link rel="stylesheet" href="css/responsivo.css">
 
     <title>Carrito de Compras</title>
 </head>
 
 <body>
     <nav>
-        <a href="index.html">
-            <h2>Inicio</h2>
-        </a>
-        <a href="tienda.html">
-            <h2>Tienda</h2>
-        </a>
-        <a href="#">
-            <h2>Ubicaciones</h2>
-        </a>
-        <a href="#">
-            <h2>Nosotros</h2>
-        </a>
-        <a href="#">
-            <h2>Cuenta</h2>
-        </a>
-        <div class="buscar">
-            <input type="text" placeholder="Buscar" required>
-        </div>
+        <input type="checkbox" id="menu" style="position: relative;"> <label for="menu">☰</label>
+        <ul>
+            <li><a href="index.html">
+                    <h2>Inicio</h2>
+                </a></li>
+            <li><a href="tienda.html">
+                    <h2>Tienda</h2>
+                </a></li>
+            <li><a href="ubicacion.html">
+                    <h2>Ubicaciones</h2>
+                </a></li>
+            <li><a href="us.html">
+                    <h2>Nosotros</h2>
+                </a></li>
+            <li><a href="cuenta/cuenta.php">
+                    <h2>Cuenta</h2>
+                </a></li>
+            <div class="buscar">
+                <input type="text" placeholder="Buscar" required>
+            </div>
 
+        </ul>
     </nav>
     <div class="container">
         <h1 class="text-center">Carrito de Compras</h1>
@@ -91,7 +95,10 @@
         <td>10</td>
         <td>
             <button class="btn btn-danger btn-sm" id="vaciar-carrito">
-                vaciar todo
+                Vaciar todo
+            </button>
+            <button class="btn" id="comprar-carrito">
+                Comprar carrito
             </button>
         </td>
         <td class="font-weight-bold">$<span>5000</span></td>
