--- a/us.html
+++ b/us.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/ubicacion.css">
+    <link rel="stylesheet" href="css/us.css">
     <link rel="stylesheet" href="css/responsivo.css">
-    <title>Proyecto final</title>
+    <title>Document</title>
 </head>
 
 <body>
@@ -35,28 +35,29 @@
         </ul>
     </nav>
 
-    <h1>Contactame</h1>
+    <h1>Sobre Nosotros</h1>
 
     <div class="container">
-        <div class="map">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3393.0622152526876!2d-106.43610598991269!3d31.74150273607757!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86e75b712108733b%3A0x2bbd560e4974c048!2sMezquite%20Coffee%20%26%20Bread!5e0!3m2!1ses-419!2smx!4v1699595563826!5m2!1ses-419!2smx"
-                width="100%" height="430" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="left-section">
+            <img src="img/us1.jpg">
         </div>
-        <div class="contact-info">
-            <h2>Datos de contacto</h2>
-            <p>Nombre: John Doe</p>
-            <p>Ubicación: Ciudad XYZ</p>
-            <p>Teléfono 1: +123456789</p>
-            <p>Teléfono 2: +987654321</p>
-            <p>Correo electrónico: john.doe@example.com</p>
-            <p>Horario: Lunes a Viernes, 9am - 5pm</p>
-            <button type="button"><a href="tienda.html">
-                    <p style="color: #c9d9c3;">Ordene y recoja</p>
-                </a></button>
+        <div class="right-section">
+            <p>Aromatea es una marca especializada en la creación de tés artesanales según tus gustos y preferencias.
+                Nos
+                dedicamos a ofrecer una amplia variedad de combinaciones y sabores únicos para que puedas disfrutar de
+                una
+                experiencia de té personalizada.</p>
         </div>
     </div>
+
+    <div class="full-width-container">
+        <img src="img/us2.jpg">
+        <blockquote>
+            <p>"Hay una gran cantidad de poesía y buenos sentimientos en una cajita de té" <br> Ralph Waldo.</p>
+        </blockquote>
+    </div>
+
+    <!-- Footer -->
     <footer>
         <div class="com">
             <h4>Compañia</h4>
